--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,5 +22,5 @@ jobs:
 
     - name: Sync files to S3
       run: |
-        aws s3 sync . s3://cpi-json-schema-files --exclude "*" --include "schema-val*"  
+        aws s3 sync . s3://dh-global-cpi-json-schema-files  --exclude "*" --include "schema-*"  
 
